// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label Basic 1`] = `
<div
  className="field-label medium my-label-class"
>
  <label
    className="text-style medium"
    htmlFor=""
  >
    This is a label
  </label>
</div>
`;

exports[`Storyshots Label Custom Button 1`] = `
<div
  className="field-label medium my-label-class"
>
  <label
    className="text-style medium"
    htmlFor=""
  >
    This is a label
  </label>
  <span
    className="field-label-icon-button medium"
  >
    <div
      className="reference-wrapper"
      id="4fzzzxj"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-disabled={false}
        className="label-icon-button button button-default button-small pill-shape icon-left"
        defaultChecked={false}
        disabled={false}
        onClick={[Function]}
        show={true}
        style={
          Object {
            "marginLeft": 8,
            "marginTop": -8,
          }
        }
        type="button"
      >
        <span>
          <span
            className="button-text-small"
          >
            Learn more
          </span>
        </span>
      </button>
    </div>
  </span>
</div>
`;

exports[`Storyshots Label Default Info Button 1`] = `
<div
  className="field-label medium my-label-class"
>
  <label
    className="text-style medium"
    htmlFor=""
  >
    This is a label
  </label>
  <span
    className="field-label-icon-button medium"
  >
    <div
      className="reference-wrapper"
      id="4fzzzxj"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-disabled={false}
        className="label-icon-button button button-default button-small round-shape icon-left"
        defaultChecked={false}
        disabled={false}
        onClick={[Function]}
        show={true}
        style={
          Object {
            "height": 16,
            "padding": 0,
          }
        }
        toolTipContent="A tooltip"
        toolTipPlacement="right"
        type="button"
      >
        <span
          aria-hidden={false}
          className="icon icon-wrapper"
          role="presentation"
        >
          <svg
            role="presentation"
            style={
              Object {
                "height": "16px",
                "width": "16px",
              }
            }
            viewBox="0 0 24 24"
          >
            <path
              d="M13,9H11V7H13M13,17H11V11H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
              style={
                Object {
                  "fill": "currentColor",
                }
              }
            />
          </svg>
        </span>
      </button>
    </div>
  </span>
</div>
`;
